[tool.poetry]
name = "grimbert"
version = "0.1.2"
description = ""
authors = ["Arthur Amalvy"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.32.1"
torch = ">=2.0.0, !=2.0.1"
more-itertools = "^10.1.0"
accelerate = "^0.22.0"
sacremoses = "^0.0.53"
scikit-learn = "^1.3.0"
sacred = "^0.8.4"
pandas = "^2.0.0"
rich = "^13.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
