[tool.poetry]
name = "grimbert"
version = "0.1.4"
description = ""
authors = ["Arthur Amalvy"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.32"
torch = "^2.0, !=2.0.1"
more-itertools = "^10.1"
accelerate = "^0"
sacremoses = "^0"
scikit-learn = "^1.3"
sacred = "^0.8"
pandas = "^2.0"
rich = "^13.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
