[project]
name = "grimbert"
version = "0.1.5"
description = ""
authors = [{ name = "Arthur Amalvy" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = { text = "GPL-3.0-only" }
dependencies = [
    "transformers>=4.56.1",
    "torch>=2.7.0",
    "more-itertools>=10.7",
    "accelerate>=1.10.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.6.0",
    "sacred>=0.8",
    "pandas>=2.0",
    "rich>=13.5",
]

[dependency-groups]
dev = ["pytest>=7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["grimbert"]
